--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <p id="top-left">San Diego Community<br>
       Colleges District’s<br>
       Employee Training Institute (ETI)</p>
-    <div>
-      <p id="bottom-left">Unique position to assist business, nonprofit organizations, and public entities with customized education and training for employees and/or clientele.</p>
+    <div id="bottom-left">
+      <p >Unique position to assist business, nonprofit organizations, and public entities with customized education and training for employees and/or clientele.</p>
       <button>Learn About Us</button>
     </div>
   </header>
